# mastps

./: .gitignore  AI_PROJECT_CONTEXT.md  Cargo.toml  MASTERPIECES_STAGE2_NOTES.md  MASTERPIECES_UPDATE_NOTES.md  README.md  README_窗口补丁.txt  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: rust.yml
scripts/: fix-tauri-main-window.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/icons/: binderIcons.ts
